enum EstadoFoco
{
    Encendido,
    Apagado
};