@startuml diagrama

class Usuario
class Serie
{
    -Foco : foquitos[10]
    +EncenderCantidad(Numero)
    +ApagarTodo()
    +ApagarCantidad(Numero)
    +RecorerDerecha()
    +RecorereIzquierda()
    +AlternanaEncendido()
}
class Foco
{
    -EstadoFoco : estado
    + Encender() 
    + Apagar()
    + Imprimir()
}
enum EstadoFoco
{
    Encendido
    Apagado

}

Foco *-- EstadoFoco
Foco --o Usuario
Serie "1" *-- "10" Foco 
Usuario o-- Serie





@enduml